Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-9102] [Source Compat] Breakage: ModelAssistant - crash after ASTVisitor #51599

Closed
clackary opened this issue Oct 28, 2018 · 2 comments
Closed
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself source compatibility

Comments

@clackary
Copy link
Contributor

Previous ID SR-9102
Radar rdar://problem/45615204
Original Reporter @clackary
Type Bug
Status Resolved
Resolution Done
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug, SourceCompatibility
Assignee @clackary
Priority Medium

md5: ac82e160025e957c3fb689d35b726748

Issue Description:

Pull request testing to add a new project (ModelAssistant) appears to be hitting a compiler crash. The project builds successfully against Xcode 10 / Swift 4.2.

See pull request and build log for more details.

Stack dump:
0.  Program arguments: /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/build/compat_macos/install/toolchain/usr/bin/swift -frontend -c /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Conditions/MutuallyExclusive.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Operations/URLSessionTaskManager.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/MASectionInfo.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/SectionsManager.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Operations/AOperation.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Operations/BlockOperation.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/OperationQueue/ExclusivityController.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/OperationQueue/AOperationQueue.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistantOperation.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperatinLogger.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/NSLock+MyOperations.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Observers/OperationObserver.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Observers/BlockObserver.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Foundation.Operation+Operation.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Operations/GroupOperation.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistantProtocol.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistant.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Conditions/OperationErrors.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Extenseions/IndexPath+Extensions.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Observers/OperationTimer.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Conditions/ReachabilityCondition.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/MAEntity.swift /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/Libraries/AOperation/Conditions/OperationCondition.swift -supplementary-output-file-map /var/folders/_8/79jmzf2142z2xydc_01btlx00000gn/T/supplementaryOutputs-75880c -target armv7-apple-ios8.0 -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.0.sdk -I /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Products/Release-iphoneos -F /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Products/Release-iphoneos -application-extension -g -import-underlying-module -module-cache-path /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/ModuleCache.noindex -swift-version 4 -O -serialize-debugging-options -Xcc -I/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/ModelAssistant-generated-files.hmap -Xcc -I/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/ModelAssistant-own-target-headers.hmap -Xcc -I/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/ModelAssistant-all-non-framework-target-headers.hmap -Xcc -ivfsoverlay -Xcc /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/all-product-headers.yaml -Xcc -iquote -Xcc /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/ModelAssistant-project-headers.hmap -Xcc -I/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Products/Release-iphoneos/include -Xcc -I/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/DerivedSources/armv7 -Xcc -I/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/DerivedSources -Xcc -ivfsoverlay -Xcc /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/unextended-module-overlay.yaml -Xcc -working-directory/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant -module-name ModelAssistant -num-threads 16 -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/MutuallyExclusive.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/URLSessionTaskManager.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/MASectionInfo.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/SectionsManager.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/AOperation.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/BlockOperation.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/ExclusivityController.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/AOperationQueue.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/ModelAssistantOperation.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/AOperatinLogger.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/NSLock+MyOperations.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/OperationObserver.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/BlockObserver.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/Foundation.Operation+Operation.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/GroupOperation.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/ModelAssistantProtocol.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/ModelAssistant.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/OperationErrors.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/IndexPath+Extensions.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/OperationTimer.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/ReachabilityCondition.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/MAEntity.o -o /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/build/Build/Intermediates.noindex/ModelAssistant.build/Release-iphoneos/ModelAssistant iOS.build/Objects-normal/armv7/OperationCondition.o 
1.  While walking into decl 'ModelAssistant' at /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistant.swift:74:14
2.  While walking into body of 'insert(_:callDelegateMethods:completion:)' at /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistant.swift:589:10
3.  While walking into body of 'inserMethod()' at /Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistant.swift:593:3
4.  While verifying ApplyExpr expression at [/Users/buildnode/jenkins/workspace-private/swift-PR-source-compat-suite-test-macOS/project_cache/ModelAssistant/Source/ModelAssistant.swift:604:19 - line:604:50] RangeText="newEntities.filter(self.filter!"
0  swift                    0x000000010e272518 llvm::sys::PrintStackTrace(llvm::raw_ostream&) + 40
1  swift                    0x000000010e2714e8 llvm::sys::RunSignalHandlers() + 248
2  swift                    0x000000010e272b32 SignalHandler(int) + 258
3  libsystem_platform.dylib 0x00007fff6cf1bf5a _sigtramp + 26
4  libsystem_platform.dylib 0x00007ffee586d0a8 _sigtramp + 2023035240
5  libsystem_c.dylib        0x00007fff6ccb91ae abort + 127
6  swift                    0x000000010b6c51e1 (anonymous namespace)::Verifier::verifyChecked(swift::ApplyExpr*) + 865
7  swift                    0x000000010b6bb37c (anonymous namespace)::Verifier::walkToExprPost(swift::Expr*) + 19052
8  swift                    0x000000010b6caf10 swift::ASTVisitor<(anonymous namespace)::Traversal, swift::Expr*, swift::Stmt*, bool, swift::Pattern*, bool, void>::visit(swift::Expr*) + 6800
9  swift                    0x000000010b6cc007 swift::ASTVisitor<(anonymous namespace)::Traversal, swift::Expr*, swift::Stmt*, bool, swift::Pattern*, bool, void>::visit(swift::Stmt*) + 359
10 swift                    0x000000010b6cc818 swift::ASTVisitor<(anonymous namespace)::Traversal, swift::Expr*, swift::Stmt*, bool, swift::Pattern*, bool, void>::visit(swift::Stmt*) + 2424
11 swift                    0x000000010b6cbf67 swift::ASTVisitor<(anonymous namespace)::Traversal, swift::Expr*, swift::Stmt*, bool, swift::Pattern*, bool, void>::visit(swift::Stmt*) + 199
12 swift                    0x000000010b6cef3b (anonymous namespace)::Traversal::visitAbstractFunctionDecl(swift::AbstractFunctionDecl*) + 683
13 swift                    0x000000010b6c9408 (anonymous namespace)::Traversal::doIt(swift::Decl*) + 216
14 swift                    0x000000010b6cc078 swift::ASTVisitor<(anonymous namespace)::Traversal, swift::Expr*, swift::Stmt*, bool, swift::Pattern*, bool, void>::visit(swift::Stmt*) + 472
15 swift                    0x000000010b6cef3b (anonymous namespace)::Traversal::visitAbstractFunctionDecl(swift::AbstractFunctionDecl*) + 683
16 swift                    0x000000010b6c9408 (anonymous namespace)::Traversal::doIt(swift::Decl*) + 216
17 swift                    0x000000010b6ce7cb (anonymous namespace)::Traversal::visitNominalTypeDecl(swift::NominalTypeDecl*) + 459
18 swift                    0x000000010b6c9408 (anonymous namespace)::Traversal::doIt(swift::Decl*) + 216
19 swift                    0x000000010b6c931b swift::Decl::walk(swift::ASTWalker&) + 27
20 swift                    0x000000010b77e84a swift::SourceFile::walk(swift::ASTWalker&) + 170
21 swift                    0x000000010b6b5aab swift::verify(swift::SourceFile&) + 59
22 swift                    0x000000010b479e8f swift::performTypeChecking(swift::SourceFile&, swift::TopLevelContext&, swift::OptionSet<swift::TypeCheckingFlags, unsigned int>, unsigned int, unsigned int, unsigned int, unsigned int, unsigned int) + 1279
23 swift                    0x000000010ac82391 swift::CompilerInstance::parseAndCheckTypesUpTo(swift::CompilerInstance::ImplicitImports const&, swift::SourceFile::ASTStage_t) + 753
24 swift                    0x000000010ac81918 swift::CompilerInstance::performSemaUpTo(swift::SourceFile::ASTStage_t) + 616
25 swift                    0x000000010a3de0cd performCompile(swift::CompilerInstance&, swift::CompilerInvocation&, llvm::ArrayRef<char const*>, int&, swift::FrontendObserver*, swift::UnifiedStatsReporter*) + 1309
26 swift                    0x000000010a3dcb1d swift::performFrontend(llvm::ArrayRef<char const*>, char const*, void*, swift::FrontendObserver*) + 3021
27 swift                    0x000000010a38eb3e main + 686
28 libdyld.dylib            0x00007fff6cc0d015 start + 1
error: Abort trap: 6
@clackary
Copy link
Contributor Author

@swift-ci create

@rudkx
Copy link
Member

rudkx commented Dec 1, 2018

This issue should be resolved now that this PR is merged: #20927

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
This issue was closed.
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself source compatibility
Projects
None yet
Development

No branches or pull requests

2 participants