[TypeChecker] Fix a problem with rethrows classification.

We failed to properly classify arguments that are of optional function
type, in this case leading to a verification failure due to the throws
attribute on the apply expression not being set to some value.

Fixes: SR-9102 / rdar://problem/45615204
(cherry picked from commit 5a498db041b185ad3f92716303fce99ef61e3c7c)